// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should render all steps as completed when activeStep is greater than the number of steps - 1 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 1 of 2 (completed)."
        >
          <svg />
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 1
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 2 of 2 (completed)."
        >
          <svg />
        </span>
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 2
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render all steps as upcoming when activeStep is negative 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--upcoming"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 1 of 2 (upcoming)."
        >
          1
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 1
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--upcoming"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 2 of 2 (upcoming)."
        >
          2
        </span>
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 2
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render all steps as upcoming when activeStep is not provided 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--upcoming"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 1 of 2 (upcoming)."
        >
          1
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 1
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--upcoming"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 2 of 2 (upcoming)."
        >
          2
        </span>
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 2
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render the active step as active and display its content 1`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--active"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 1 of 2 (active)."
        >
          1
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 1
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        >
          <div
            class="googlesitekit-stepper__step-content"
          >
            This is step 1.
          </div>
        </div>
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--upcoming"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 2 of 2 (upcoming)."
        >
          2
        </span>
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 2
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
  </ol>
</div>
`;

exports[`Stepper should render the active step as active and display its content 2`] = `
<div>
  <ol
    class="googlesitekit-stepper"
  >
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--completed"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 1 of 2 (completed)."
        >
          <svg />
        </span>
        <div
          class="googlesitekit-stepper__step-progress-line"
        />
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 1
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        />
      </div>
    </li>
    <li
      class="googlesitekit-stepper__step googlesitekit-stepper__step--active"
    >
      <div
        class="googlesitekit-stepper__step-progress"
      >
        <span
          class="googlesitekit-stepper__step-number"
          title="Step 2 of 2 (active)."
        >
          2
        </span>
      </div>
      <div
        class="googlesitekit-stepper__step-info"
      >
        <h2
          class="googlesitekit-stepper__step-title"
        >
          Step 2
        </h2>
        <div
          class="googlesitekit-stepper__step-content-container"
        >
          <div
            class="googlesitekit-stepper__step-content"
          >
            This is step 2.
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;
